--- a/app/javascript/stylesheets/bootstrap-custom.css
+++ b/app/javascript/stylesheets/bootstrap-custom.css
@@ -161,7 +161,7 @@ input[type="radio"]+label {
   font-size:22px;
   border:1px solid black;
   border-radius:10px;
-  padding:5px;
+  padding:2px 20px 2px 20px;
   background:white;
   color:black;
 }
@@ -172,8 +172,41 @@ input[type="radio"]:checked+label{
 
 .destination-select{
   width:100%;
+  height: 2em;
 }
 
 .travel-btn{
   width:100%;
+}
+
+.input-travel-title{
+  font-size: 2em;
+}
+
+.travel-new{
+  font-family: "タイムマシンわ号";
+  background: linear-gradient(transparent 50%,rgba(247, 198, 104, 0.2) 50%,rgb(247, 198, 104) 75%,rgba(247, 198, 104, 0.2));
+  font-weight: bold;
+}
+
+.travel-edit{
+  font-family: "タイムマシンわ号";
+  background: linear-gradient(transparent 50%,rgba(208, 227, 155, 0.2) 50%,rgb(208, 227, 155) 75%,rgba(208, 227, 155, 0.2));
+  font-weight: bold;
+}
+
+.travel-detail-new{
+  font-family: "タイムマシンわ号";
+  background: linear-gradient(transparent 50%,rgba(247, 198, 104, 0.2) 50%,rgb(247, 198, 104) 75%,rgba(247, 198, 104, 0.2));
+  font-weight: bold;
+}
+
+.input-travel-title-detail{
+  font-size: 2em;
+}
+
+.travel-detail-edit{
+  font-family: "タイムマシンわ号";
+  background: linear-gradient(transparent 50%,rgba(208, 227, 155, 0.2) 50%,rgb(208, 227, 155) 75%,rgba(208, 227, 155, 0.2));
+  font-weight: bold;
 }
