--- a/app/views/public/customers/mypage.html.erb
+++ b/app/views/public/customers/mypage.html.erb
@@ -4,7 +4,7 @@
       <div class="row justify-content-end mr-5">
         <%= link_to new_travel_path do%>
           <i class="fas fa-plus-circle fa-4x mt-3 mb-n5"></i>
-        <%end%><br>
+        <%end%>
       </div>
       <div class="row">
         <div class="col-5 clearfix pr-4">
