--- a/app/views/public/relationships/_follow_button.html.erb
+++ b/app/views/public/relationships/_follow_button.html.erb
@@ -5,14 +5,14 @@
    <%#= form_with(model: current_customer.relationships.find_by(follow_id: customer.id),method: :delete) do |f| %>
      <%#= f.hidden_field :follow_id %>
      <%= hidden_field_tag :follow_id, customer.id %>
-     <%= f.submit 'フォロー中', class: 'btn btn-danger btn-block' %>
+     <%= f.submit '  フォロー中  ', class:'btn btn-block btn-follow' %>
    <% end %>
  <% else %>
    <%= form_for(current_customer.relationships.build) do |f| %>
    <%#= form_with(model: current_customer.relationships.build) do |f| %>
      <%#= f.hidden_field :follow_id, value: customer.id %>
      <%= hidden_field_tag :follow_id, customer.id %>
-     <%= f.submit 'フォローする', class: 'btn btn-primary btn-block' %>
+     <%= f.submit 'フォローする', class:'btn btn-block btn-follow' %>
    <% end %>
  <% end %>
 <% end %>
