--- a/app/views/public/comments/new.html.erb
+++ b/app/views/public/comments/new.html.erb
@@ -22,7 +22,7 @@
       <div>
         <% @comments.each do |comment|%>
           <div class="my-2">
-            <d<iv class="d-flex flex-row">
+            <div class="d-flex flex-row">
               <div class="d-flex flex-column mt-2 ml-2">
                 <%= link_to customer_path(comment.customer_id) do %>
                   <%= image_tag comment.customer.get_profile_image(50,50),class:"rounded-circle border"%>
