--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,24 +1,74 @@
+<div class="row d-flex justify-content-center mt-3">
+  <div class="col-5 clearfix mr-2">
+    <%= link_to avatar_customer_path(@customer) do %>
+      <%= image_tag @customer.get_profile_image(100,100),class:"rounded-circle float-right border"%>
+    <% end %>
+  </div>
+  <div class="col-6 px-0 mt-3">
+    <div class="d-flex align-items-center">
+      <h2 class="mb-0 mypage-account border-bottom "><%= @customer.account%></h2>
+      <div class="ml-2">
+        <% if customer_signed_in? %>
+          <%= render 'public/relationships/follow_button', customer: @customer %>
+        <%end%>
+      </div>
+    </div>
+    <div class="d-flex align-items-center">
+      <%= "公開中 #{@travels.count}"%>
+      <%= link_to "フォロー #{@customer.followings.count}", followings_customer_path(@customer), class: "nav-link pl-3 pr-0 followings-text" %>
+      <%= link_to "フォロワー #{@customer.followers.count}", followers_customer_path(@customer), class: "nav-link pl-3 pr-0 followers-text" %>
+    </div>
+  </div>
+</div>
+<div class="row d-flex justify-content-center mt-3 mb-3">
+  <div class="border customer-show-self_introduction rounded"><%= safe_join(@customer.self_introduction.split("\n"),tag(:br))%></div>
+</div>
+<div class="container travel-index">
+  <div class="d-flex flex-wrap">
+    <% @travels.reverse.each do |travel|%>
+      <div class="card travel-index-card mt-2 mb-2 mx-2 shadow-lg">
+        <%= link_to travel_path(travel) do %>
+          <%= image_tag travel.get_image(300,300),class:"trim"%>
+        <%end%>
+        <div class="d-flex flex-row">
+          <div class="d-flex flex-column mt-2 ml-2">
+            <%= link_to customer_path(travel.customer_id) do %>
+              <%= image_tag travel.customer.get_profile_image(50,50),class:"rounded-circle border"%>
+            <% end %>
+            <div class="mx-auto"><%= travel.customer.account%></div>
+          </div>
+          <div class="d-flex flex-column mx-auto mx-0">
+            <div class="d-flex flex-column travel-index-title">
+              <div><%= travel.travel_start.strftime('%Y/%m/%d')%>〜<%= travel.travel_finish.strftime('%Y/%m/%d')%></div>
+              <%= link_to travel_path(travel),class:"mx-auto" do %>
+                <h4 class="mb-0 travel-index-title"><%= travel.travel_title%></h4>
+              <%end%>
+            </div>
+            <div class="d-flex align-items-center justify-content-center">
+              <div class="pr-2">
+                <% if customer_signed_in? %>
+                  <% if travel.good_by?(current_customer) %>
+                    <%= link_to travel_goods_path(travel),class:"travel-show-good-comment_decoration", method: :delete do %>
+                      <p class="travel-index-good-comment mb-0"><span class="travel-show-span">♥</span><%= travel.goods.count %> いいね</p>
+                    <% end %>
+                  <% else %>
+                    <%= link_to travel_goods_path(travel),class:"travel-show-good-comment_decoration", method: :post do %>
+                      <p class="travel-index-good-comment mb-0">♡<%= travel.goods.count %> いいね</p>
+                    <% end %>
+                  <% end %>
+                <%end%>
+              </div>
+              <div class="pl-2">
+                <%= link_to new_travel_comment_path(travel),class:"travel-show-good-comment_decoration" do%>
+                  <p class="travel-index-good-comment mb-0"><i class="far fa-comment"></i>コメント</p>
+                <%end%>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    <%end%>
+  </div>
+</div>
 
-<%= link_to edit_customer_registration_path do %>
-  <%= image_tag @customer.get_profile_image(100,100) %>
-<% end %>
-<%= @customer.account%>
-<p>投稿</p>
-<%= link_to "フォロー(#{@customer.followings.count})", followings_customer_path(@customer), class: "nav-link" %>
-<%= link_to "フォロワー(#{@customer.followers.count})", followers_customer_path(@customer), class: "nav-link" %>
-
-<% if customer_signed_in? %>
-  <%= render 'public/relationships/follow_button', customer: @customer %>
-<%end%>
-
-<%= @customer.self_introduction%><br>
-
-
-<% @travels.each do |travel|%>
-  <%= travel.open%>
-  <%= travel.travel_start %><%= travel.travel_finish %>
-  <%= link_to travel_path(travel.id) do %>
-    <%= travel.travel_title%>
-  <% end %>
-<% end %>
 
