--- a/app/views/public/travels/show.html.erb
+++ b/app/views/public/travels/show.html.erb
@@ -36,12 +36,22 @@
       </div>
     </div>
   </div>
-  <div class="col-3 d-flex flex-row-reverse pr-5">
+  <div class="col-3 d-flex justify-content-end pr-5">
     <% if customer_signed_in? %>
       <% if @travel.customer.id == current_customer.id %>
         <%= link_to new_travel_travel_detail_path(@travel) do%>
           <i class="fas fa-plus-circle fa-4x mt-3 mr-5"></i>
         <%end%>
+      <%else%>
+        <div class="d-flex flex-row">
+          <%= link_to customer_path(@travel.customer_id) do %>
+            <%= image_tag @travel.customer.get_profile_image(60,60),class:"rounded-circle float-right border"%>
+          <% end %>
+          <div>
+            <p class="ml-2 mt-2 mb-0 border-bottom"><%= @travel.customer.account%></p>
+            <p>　の旅行</p>
+          </div>
+        </div>
       <%end%>
     <%end%>
   </div>
