--- a/app/views/public/travel_details/new.html.erb
+++ b/app/views/public/travel_details/new.html.erb
@@ -12,6 +12,6 @@
         <div class="mx-auto mb-3" style="width: 40%;"><%= f.submit "Go",class:"btn btn-info travel-btn"%></div>
         <%end%>
       </div>
-    </div>
+    </div>, 
   </div>
 </div>
