[fix]ユーザー検索機能

--- a/app/javascript/stylesheets/bootstrap-custom.css
+++ b/app/javascript/stylesheets/bootstrap-custom.css
@@ -128,9 +128,10 @@
 
 .travel_detail-show-memo{
   width: 60%;
-  height:4em;
+  height:3em;
   background-color: white;
   border-radius: 10px;
+  overflow: hidden;
 }
 
 .travel_detail-show-date{
