--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,13 +20,16 @@
       <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
       <%= link_to "退会する", unsubscrib_customer_path(current_customer.id)%>
       <%= link_to "わたし", customers_my_page_path %>
-      <%= link_to "みんな", root_path %>
+
     <% else %>
       <%= image_tag 'no_image', size: "50x50" %>
       <%= link_to "ログイン",new_customer_session_path%>
       <%= link_to "サインイン",new_customer_registration_path%>
-      <%= link_to "みんな", root_path %>
     <% end %>
+      <%= link_to "みんな", root_path%>
+      <%=link_to search_customers_path do%>
+        <i class="fas fa-search"></i>ユーザー検索
+      <%end%>
 
     </header>
     <main class="mb-auto">
