--- a/app/views/public/travels/new.html.erb
+++ b/app/views/public/travels/new.html.erb
@@ -1,11 +1,11 @@
 <%#= f.file_field :image, accept: "image/*" %>
-<div class="containe mt-5">
-  <div class="col-4 mx-auto">
+<div class="container mt-5">
+  <div class="col-6 mx-auto">
     <div class="card mx-auto py-3">
-      <div class="row justify-content-center">
+      <div class="row d-flex justify-content-center">
         <h1 class="travel-new mb-3">Create New</h1>
         <%= form_with model: @travel do |f|%>
-          <h2 class="mt-3 mb-3"><%= f.date_field :travel_start %>から<%= f.date_field :travel_finish %></h2>
+          <h4 class="mt-3 mb-3"><%= f.date_field :travel_start %>から<%= f.date_field :travel_finish %></h4>
           <div class="mx-auto mb-3" style="width: 30%;"><%= f.select :destination, Travel.destinations.keys.map{|k| [I18n.t("enums.travel.destination.#{k}"), k]},{},{ class:"destination-select"}%></div>
           <div class="mx-auto mb-3" style="width: 70%;"><%= f.text_field :travel_title,class:"input-travel-title",style: "width:100%"%></div>
           <div class="mx-auto d-flex justify-content-around mb-4" style="width: 60%;">
