--- a/app/views/public/customers/avatar.html.erb
+++ b/app/views/public/customers/avatar.html.erb
@@ -5,7 +5,7 @@
       <%= image_tag @customer.get_profile_image(400,400),class:"rounded-circle border"%>
       <%= form_with model: @customer do |f|%>
         <div class="d-flex justify-content-center mt-2"><%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*"%></div>
-        <div class="d-flex justify-content-center mt-2"><%= f.submit "画像保存",class:"avatar-submit" %></div>
+        <div class="d-flex justify-content-center mt-2"><%= f.submit "画像を反映させる",class:"avatar-submit" %></div>
       <%end%>
       <div class="d-flex justify-content-center mt-2"><%= link_to "確認完了" ,customers_my_page_path,class:"btn btn-info btn-sm avatar-submit"%></div>
     </div>
