--- a/app/views/public/registrations/edit.html.erb
+++ b/app/views/public/registrations/edit.html.erb
@@ -8,23 +8,26 @@
         <div class="row mx-4">
           <div class="box">
             <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-            <%= render "public/shared/error_messages", resource: resource %>
-            <%= f.text_field :name,style: "width:100%", autofocus: true, autocomplete: "name", placeholder: "名前を入力",class:"mb-2"%><br>
-            <%= f.text_field :account,style: "width:100%", autofocus: true, autocomplete: "account", placeholder: "アカウント名を入力",class:"mb-2"%><br>
-            <%= f.email_field :email,style: "width:100%", autofocus: true, autocomplete: "email", placeholder: "メールアドレスを入力",class:"mb-2"%><br>
-            <%= f.password_field :password,style: "width:100%", autocomplete: "new-password", placeholder: "パスワードを入力（６文字以上）",class:"mb-2"%><br>
-            <%= f.password_field :password_confirmation,style: "width:100%", autocomplete: "new-password", placeholder: "確認用のパスワードを入力",class:"mb-2"%><br>
-            <%= f.text_area :self_introduction,style: "width:100%",rows: 5, placeholder: "自己紹介文を入力"%>
+              <%= render "public/shared/error_messages", resource: resource %>
+              <%= f.text_field :name,style: "width:100%", autofocus: true, autocomplete: "name", placeholder: "名前を入力",class:"mb-2"%><br>
+              <%= f.text_field :account,style: "width:100%", autofocus: true, autocomplete: "account", placeholder: "アカウント名を入力",class:"mb-2"%><br>
+              <%= f.email_field :email,style: "width:100%", autofocus: true, autocomplete: "email", placeholder: "メールアドレスを入力",class:"mb-2"%><br>
+              <%= f.password_field :password,style: "width:100%", autocomplete: "new-password", placeholder: "パスワードを入力（６文字以上）",class:"mb-2"%><br>
+              <%= f.password_field :password_confirmation,style: "width:100%", autocomplete: "new-password", placeholder: "確認用のパスワードを入力",class:"mb-2"%><br>
+              <%= f.text_area :self_introduction,style: "width:100%",rows: 5, placeholder: "自己紹介文を入力"%>
+              <div class="d-flex justify-content-center mb-3 mt-3">
+                <div>
+                  <%= button_tag type: 'submit', class:'btn btn-default p-0 mr-3' do%>
+                    <i class="fas fa-check-circle fa-4x signin-submit"></i>
+                  <%end%>
+                  <%= link_to customers_my_page_path, class:'btn btn-default p-0 ml-3' do%>
+                    <i class="fas fa-times-circle fa-4x sigout-link"></i>
+                  <%end%>
+                </div>
+              </div>
+            <% end %>
+            </div>
           </div>
-        </div>
-        <div class="row mx-auto mb-3 mt-3">
-            <%= button_tag type: 'submit', class:'btn btn-default p-0 mr-3' do%>
-              <i class="fas fa-check-circle fa-4x signin-submit"></i>
-            <%end%>
-          <% end %>
-          <%= link_to customers_my_page_path, class:'btn btn-default p-0 ml-3' do%>
-            <i class="fas fa-times-circle fa-4x sigout-link"></i>
-          <%end%>
         </div>
       </div>
     </div>
