--- a/app/views/public/travel_details/new.html.erb
+++ b/app/views/public/travel_details/new.html.erb
@@ -1,5 +1,5 @@
-<div class="containe mt-5">
-  <div class="col-4 mx-auto">
+<div class="container mt-5">
+  <div class="col-6 mx-auto">
     <div class="card mx-auto py-3">
       <div class="row d-flex justify-content-center">
         <h1 class="travel-detail-new mb-3">schedule</h1>
@@ -8,10 +8,10 @@
         <div class="mx-auto mb-3" style="width: 60%;"><%= f.text_field :travel_title_detail,class:"input-travel-title-detail",style: "width:100%", placeholder: "タイトルを入力"%></div>
         <h2 class="mx-auto d-flex justify-content-around mb-3" style="width:90%"><%= f.time_field :start_time%>から<%= f.time_field :finish_time%></h2>
         <p class="mb-0">〜 memo 〜</p>
-        <div class="mb-4"><%= f.text_area :memo,cols:"50%",  rows: 2 %></div>
+        <div class="mb-4"><%= f.text_area :memo,cols:"54%",  rows:2 %></div>
         <div class="mx-auto mb-3" style="width: 40%;"><%= f.submit "Go",class:"btn btn-info travel-btn"%></div>
         <%end%>
       </div>
-    </div>, 
+    </div>,
   </div>
 </div>
