--- a/app/views/public/travels/bestshot.html.erb
+++ b/app/views/public/travels/bestshot.html.erb
@@ -1,7 +1,12 @@
-<%= image_tag @travel.get_image(300,200),class:"pl-5"%>
-<%= form_with model: @travel,url:imageupdate_travel_path(@travel) do |f|%>
-<%= f.file_field :image,accept:"image/*" %>
-<%= f.submit "登録" %>
-<%end%>
-
-<%= link_to "OK" ,travel_path(@travel)%>
+<div class="container mt-3">
+  <div class="d-flex justify-content-center">
+    <div class="mx-auto">
+      <%= image_tag @travel.get_image(400,400)%>
+      <%= form_with model: @travel,url:imageupdate_travel_path(@travel) do |f|%>
+        <div class="d-flex justify-content-center mt-2"><%= f.file_field :image, placeholder: "旅のベストショット",accept:"image/*" %></div>
+        <div class="d-flex justify-content-center mt-2"><%= f.submit "画像を反映させる",class:"avatar-submit" %></div>
+      <%end%>
+      <div class="d-flex justify-content-center mt-2"><%= link_to "確認完了" ,travel_path(@travel),class:"btn btn-info btn-sm avatar-submit"%></div>
+    </div>
+  </div>
+</div>
