--- a/app/javascript/stylesheets/bootstrap-custom.css
+++ b/app/javascript/stylesheets/bootstrap-custom.css
@@ -100,13 +100,8 @@
   border-radius: 20px;
 }
 
-.mypage-container{
-  height: 100vh;
-}
 
 .mypage-container-color{
-  height: 100vh;
-  background-color: white;
   width: 80%;
 }
 
@@ -295,9 +290,49 @@ input[type="radio"]:checked+label{
 
 .customer-show-self_introduction{
   width: 25%;
-  height: 100px;
+  height: 8em;
+  overflow: hidden;
 }
 
 .avatar-submit{
   width: 80%;
+}
+
+header{
+  height: 70px;
+}
+
+.hp-title{
+  font-family: "ニコカ";
+  font-size: 50px;
+  color: white;
+  text-decoration: none;
+}
+
+.fas-font-color{
+  color: white;
+}
+
+.header-logout{
+  color: #dddddd;
+  text-decoration: none;
+}
+
+.header-withdrawal{
+  color: #dddddd;
+  text-decoration: none;
+}
+
+.header-fas{
+  width: 224px;
+}
+
+.header-login{
+  color: #dddddd;
+  text-decoration: none;
+}
+
+.header-signin{
+  color: #dddddd;
+  text-decoration: none;
 }
