--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,32 +11,50 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="d-flex flex-column vh-100">
-    <header class="shadow-sm border-bottom sticky-top bg-warning">
+  <body class="d-flex flex-column">
+    <header class="shadow-sm border-bottom border-dark sticky-top bg-dark d-flex align-items-center justify-content-between">
     <% if customer_signed_in? %>
-      <%= link_to edit_customer_registration_path do%>
-        <%= image_tag current_customer.get_profile_image(50,50),class:"rounded-circle" %>
-      <%end%>
-      <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
-      <%= link_to "退会する", unsubscrib_customer_path(current_customer.id)%>
-      <%= link_to "わたし", customers_my_page_path %>
+      <div>
+        <%= link_to edit_customer_registration_path do%>
+          <%= image_tag current_customer.get_profile_image(50,50),class:"rounded-circle mr-3 ml-2" %>
+        <%end%>
+        <%= link_to "ログアウト", destroy_customer_session_path, method: :delete,class:"header-logout" %>
+        <%= link_to "退会する", unsubscrib_customer_path(current_customer.id),class:"header-withdrawal"%>
+      </div>
+      <diV><a class=hp-title href="/">Re.Travel</a></diV>
+      <diV class="header-fas">
+        <%= link_to customers_my_page_path do%>
+          <i class="fas fa-user fa-2x fas-font-color mr-4"></i>
+        <%end%>
+        <%= link_to root_path do%>
+          <i class="fas fa-users fa-2x fas-font-color mr-4"></i>
+        <%end%>
+        <%=link_to search_customers_path do%>
+          <i class="fas fa-search fa-2x fas-font-color"></i>
+        <%end%>
+      </diV>
 
     <% else %>
-      <%= image_tag 'no_image', size: "50x50" %>
-      <%= link_to "ログイン",new_customer_session_path%>
-      <%= link_to "サインイン",new_customer_registration_path%>
+      <div>
+        <%= image_tag 'no_image', size: "50x50",class:"rounded-circle mr-3 ml-2" %>
+        <%= link_to "ログイン",new_customer_session_path,class:"header-login"%>
+        <%= link_to "サインイン",new_customer_registration_path,class:"header-signin"%>
+      </div>
+      <diV><a class=hp-title href="/">Re.Travel</a></diV>
+      <div class="header-fas d-flex justify-content-end">
+        <%= link_to root_path do%>
+          <i class="fas fa-users fa-2x fas-font-color mr-4"></i>
+        <%end%>
+        <%=link_to search_customers_path do%>
+          <i class="fas fa-search fa-2x fas-font-color mr-4"></i>
+        <%end%>
+      </div>
     <% end %>
-      <%= link_to "みんな", root_path%>
-      <%=link_to search_customers_path do%>
-        <i class="fas fa-search"></i>ユーザー検索
-      <%end%>
 
     </header>
     <main class="mb-auto">
     <%= yield %>
     </main>
-    <footer class="bg-dark text-white pt-5">
 
-    </footer>
   </body>
 </html>
