--- a/app/views/public/customers/mypage.html.erb
+++ b/app/views/public/customers/mypage.html.erb
@@ -1,5 +1,4 @@
-<div class="bg-secondary">
-  <div class="container mypage-container">
+  <div class="container">
     <div class="mypage-container-color mx-auto">
       <div class="row justify-content-end mr-5">
         <%= link_to new_travel_path do%>
@@ -113,7 +112,6 @@
       </div>
     </div>
   </div>
-</div>
 
 
 
