--- a/app/views/public/travels/new.html.erb
+++ b/app/views/public/travels/new.html.erb
@@ -1,4 +1,3 @@
-<%#= f.file_field :image, accept: "image/*" %>
 <div class="container mt-5">
   <div class="col-6 mx-auto">
     <div class="card mx-auto py-3">
@@ -7,7 +6,7 @@
         <%= form_with model: @travel do |f|%>
           <h4 class="mt-3 mb-3"><%= f.date_field :travel_start %>から<%= f.date_field :travel_finish %></h4>
           <div class="mx-auto mb-3" style="width: 30%;"><%= f.select :destination, Travel.destinations.keys.map{|k| [I18n.t("enums.travel.destination.#{k}"), k]},{},{ class:"destination-select"}%></div>
-          <div class="mx-auto mb-3" style="width: 70%;"><%= f.text_field :travel_title,class:"input-travel-title",style: "width:100%"%></div>
+          <div class="mx-auto mb-3" style="width: 70%;"><%= f.text_field :travel_title, placeholder: "タイトルを入力", maxlength: "9",class:"input-travel-title",style: "width:100%"%></div>
           <div class="mx-auto d-flex justify-content-around mb-4" style="width: 60%;">
             <%= f.radio_button :open, "true" %>
             <label for="travel_open_true">公　開</label>
