--- a/app/javascript/stylesheets/bootstrap-custom.css
+++ b/app/javascript/stylesheets/bootstrap-custom.css
@@ -336,3 +336,17 @@ header{
   color: #dddddd;
   text-decoration: none;
 }
+
+.admin_customer-show-self_introduction{
+  width: 60%;
+  height: 8em;
+  overflow: hidden;
+}
+
+.admin_customer-show-submit{
+  width: 50%;
+}
+
+.fa-trash-alt{
+  color: #dddddd;
+}
