--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,9 +1,41 @@
-<%= image_tag @customer.get_profile_image(100,100) %>
-<%= @customer.id%>
-<%= @customer.name%>
-<%= @customer.account%>
-<%= @customer.email%>
-<%= @customer.is_active%>
-<%= @customer.self_introduction%>
-
-<%= link_to "編集",edit_admin_customer_path(@customer.id)%>
+<div class="container">
+  <div class="row">
+    <div class="col-5 mt-4">
+      <%= image_tag @customer.get_profile_image(300,300),class:"rounded-circle float-right border" %>
+    </div>
+    <div class="col-7 pl-5">
+      <table class="mt-5">
+        <tr>
+          <th style="width: 70%">会員ID</th>
+          <td><%= @customer.id%></td>
+        </tr>
+        <tr>
+          <th>名前</th>
+          <td><%= @customer.name%></td>
+        </tr>
+        <tr>
+          <th>アカウント名</th>
+          <td><%= @customer.account%></td>
+        </tr>
+        <tr>
+          <th>メールアドレス</th>
+          <td><%= @customer.email%></td>
+        </tr>
+        <tr>
+          <th>ステータス</th>
+          <td>
+            <% if @customer.is_active %>
+              <p class="text-secondary mb-0"><strong>退会済</strong></p>
+            <% else %>
+              <p class="text-success mb-0"><strong>有効</strong></p>
+            <% end %>
+          </td>
+        </tr>
+      </table>
+      <div class="d-flex mt-3 mb-3">
+        <div class="border admin_customer-show-self_introduction rounded"><%= safe_join(@customer.self_introduction.split("\n"),tag(:br))%></div>
+      </div>
+    </div>
+  </div>
+    <div class="d-flex justify-content-center mt-5"><%= link_to "編集",edit_admin_customer_path(@customer.id),class:"btn btn-info btn-sm admin_customer-show-submit"%></div>
+</div>
