--- a/app/views/public/travels/bestshot.html.erb
+++ b/app/views/public/travels/bestshot.html.erb
@@ -2,7 +2,7 @@
   <div class="d-flex justify-content-center">
     <div class="mx-auto">
       <%= image_tag @travel.get_image(400,400)%>
-      <%= form_with model: @travel,url:imageupdate_travel_path(@travel) do |f|%>
+      <%= form_with model: @travel,url:imageupdate_travel_path(@travel),local:true,method: :patch do |f|%>
         <div class="d-flex justify-content-center mt-2"><%= f.file_field :image, placeholder: "旅のベストショット",accept:"image/*" %></div>
         <div class="d-flex justify-content-center mt-2"><%= f.submit "画像を反映させる",class:"avatar-submit" %></div>
       <%end%>
