[fix]no_imageの削除を回復

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
       </diV>
     <% else %>
       <div>
-        <%#= image_tag asset_path('no_image.jpg'), size: "50x50",class:"rounded-circle mr-3 ml-2" %>
+        <%= image_tag asset_path('no_image.jpg'), size: "50x50",class:"rounded-circle mr-3 ml-2" %>
         <%= link_to "ログイン",new_customer_session_path,class:"header-login"%>
         <%= link_to "サインイン",new_customer_registration_path,class:"header-signin"%>
       </div>
