--- a/app/views/public/customers/mypage.html.erb
+++ b/app/views/public/customers/mypage.html.erb
@@ -36,7 +36,7 @@
         <div class="col-8">
           <div class="d-flex justify-content-around">
             <div class="chart">
-              <% if current_page?('https://498a5297a02d4522b18f7164798f32db.vfs.cloud9.us-east-1.amazonaws.com/customers/my_page.1') %>
+              <% if current_page?(customers_my_page_path(1)) %>
                 <% @travels1.reverse.each do |travel|%>
                   <div class="border border-light travel-bg px-3 py-1 mb-2 d-flex align-items-center bd-highlight">
                     <% if travel.open %>
@@ -59,7 +59,7 @@
                     </div>
                   </div>
                 <% end %>
-              <% elsif current_page?('https://498a5297a02d4522b18f7164798f32db.vfs.cloud9.us-east-1.amazonaws.com/customers/my_page.2')%>
+              <% elsif current_page?(customers_my_page_path(2))%>
                 <% @travels2.reverse.each do |travel|%>
                   <div class="border border-light travel-bg px-3 py-1 mb-2 d-flex align-items-center bd-highlight">
                     <% if travel.open %>
