[fix]コメントレイアウト修正、ヘッダーレイアウト修正

--- a/app/javascript/stylesheets/bootstrap-custom.css
+++ b/app/javascript/stylesheets/bootstrap-custom.css
@@ -245,6 +245,7 @@ input[type="radio"]:checked+label{
   box-sizing: border-box;
 }
 
+
 .balloon-left:before {
   content: "";
   position: absolute;
@@ -264,6 +265,42 @@ input[type="radio"]:checked+label{
   margin-top: -14px;
   border: 14px solid transparent;
   border-right: 14px solid #555;
+  z-index: 1;
+}
+
+.balloon-right {
+  position: relative;
+  display: inline-block;
+  margin: 1.5em 15px 1.5em 0;
+  padding: 7px 10px;
+  min-width: 120px;
+  max-width: 100%;
+  color: #555;
+  font-size: 16px;
+  background: #FFF;
+  border: solid 3px #555;
+  box-sizing: border-box;
+}
+
+.balloon-right:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: -24px;
+  margin-top: -12px;
+  border: 12px solid transparent;
+  border-left: 12px solid #FFF;
+  z-index: 2;
+}
+
+.balloon-right:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: -30px;
+  margin-top: -14px;
+  border: 14px solid transparent;
+  border-left: 14px solid #555;
   z-index: 1;
 }
 
@@ -323,8 +360,14 @@ header{
   text-decoration: none;
 }
 
-.header-fas{
-  width: 224px;
+.header-left{
+  width: 559px;
+}
+
+.header-link-text{
+  color: #dddddd;
+  font-family: ニコカ;
+  text-decoration: none;
 }
 
 .header-login{
