--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         <%= link_to "投稿一覧",admin_travels_path,class:"header-logout mr-2"%>
       </div>
     <% elsif customer_signed_in? %>
-      <div>
+      <div class="header-left">
         <%= link_to edit_customer_registration_path do%>
           <%= image_tag current_customer.get_profile_image(50,50),class:"rounded-circle mr-3 ml-2" %>
         <%end%>
@@ -30,15 +30,15 @@
         <%= link_to "退会する", unsubscrib_customer_path(current_customer.id),class:"header-withdrawal"%>
       </div>
       <diV><a class=hp-title href="/">Re.Travel</a></diV>
-      <diV class="header-fas">
+      <diV class="header-fas d-flex flex-row mr-2">
         <%= link_to customers_my_page_path do%>
-          <i class="fas fa-user fa-2x fas-font-color mr-4"></i>
+          <p class="header-link-text mr-4 mb-0"><i class="fas fa-user fa-3x fas-font-color"></i>プランを考える</p>
         <%end%>
         <%= link_to root_path do%>
-          <i class="fas fa-users fa-2x fas-font-color mr-4"></i>
+          <p class="header-link-text mr-4 mb-0"><i class="fas fa-users fa-3x fas-font-color"></i>みんなのプランを見る</p>
         <%end%>
         <%=link_to search_customers_path do%>
-          <i class="fas fa-search fa-2x fas-font-color"></i>
+          <p class="header-link-text mr-4 mb-0"><i class="fas fa-search fa-3x fas-font-color"></i>ユーザーを見つける</p>
         <%end%>
       </diV>
     <% else %>
@@ -50,10 +50,10 @@
       <diV><a class=hp-title href="/">Re.Travel</a></diV>
       <div class="header-fas d-flex justify-content-end">
         <%= link_to root_path do%>
-          <i class="fas fa-users fa-2x fas-font-color mr-4"></i>
+          <p class="header-link-text mr-4 mb-0"><i class="fas fa-users fa-3x fas-font-color"></i>みんなのプランを見る</p>
         <%end%>
         <%=link_to search_customers_path do%>
-          <i class="fas fa-search fa-2x fas-font-color mr-4"></i>
+          <p class="header-link-text mr-4 mb-0"><i class="fas fa-search fa-3x fas-font-color"></i>ユーザーを見つける</p>
         <%end%>
       </div>
     <% end %>
