--- a/app/views/public/comments/new.html.erb
+++ b/app/views/public/comments/new.html.erb
@@ -22,17 +22,41 @@
       <div>
         <% @comments.each do |comment|%>
           <div class="my-2">
-            <div class="d-flex flex-row">
-              <div class="d-flex align-items-center">
-                <div class="d-flex flex-column mt-2 ml-2">
-                  <%= link_to customer_path(comment.customer_id) do %>
-                    <%= image_tag comment.customer.get_profile_image(50,50),class:"rounded-circle border"%>
-                  <% end %>
-                  <div class="mx-auto"><%= comment.customer.account%></div>
+            <%if @travel.customer == comment.customer %>
+              <div class="d-flex flex-row-reverse">
+                <div class="d-flex align-items-center">
+                  <div class="d-flex flex-column mt-2 mr-2">
+                    <%= link_to customer_path(comment.customer_id) do %>
+                      <%= image_tag comment.customer.get_profile_image(50,50),class:"rounded-circle border"%>
+                    <% end %>
+                    <div class="mx-auto"><%= comment.customer.account%></div>
+                  </div>
                 </div>
+                <div class="balloon-right">
+                  <%= comment.review %>
+                  <%= link_to travel_comment_path(@travel,comment),method: :delete, "data-confirm" => "本当に削除しますか？" do %>
+                    <i class="fas fa-times-circle"></i>
+                  <%end%>
+                </div><br>
               </div>
-              <div class="balloon-left"><%= comment.review %></div><br>
-            </div>
+            <%else%>
+              <div class="d-flex flex-row">
+                <div class="d-flex align-items-center">
+                  <div class="d-flex flex-column mt-2 ml-2">
+                    <%= link_to customer_path(comment.customer_id) do %>
+                      <%= image_tag comment.customer.get_profile_image(50,50),class:"rounded-circle border"%>
+                    <% end %>
+                    <div class="mx-auto"><%= comment.customer.account%></div>
+                  </div>
+                </div>
+                <div class="balloon-left">
+                  <%= comment.review %>
+                  <%= link_to travel_comment_path(@travel,comment),method: :delete, "data-confirm" => "本当に削除しますか？" do %>
+                    <i class="fas fa-times-circle"></i>
+                  <%end%>
+                </div><br>
+              </div>
+            <%end%>
           </div>
         <%end%>
       </div>
